--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
             <artifactId>jbehave-core</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>4.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
